<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/snow_white"
    android:paddingBottom="4dp">

    <ImageView
        android:id="@+id/ivTop"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toStartOf="@+id/ivRecent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_top_grey"
        android:contentDescription="@string/top_pictures" />

    <TextView
        android:id="@+id/tvTop"
        style="@style/BalooRegular.TextSmall12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_pictures"
        app:layout_constraintEnd_toEndOf="@+id/ivTop"
        app:layout_constraintStart_toStartOf="@+id/ivTop"
        app:layout_constraintTop_toBottomOf="@+id/ivTop" />

    <ImageView
        android:id="@+id/ivRecent"
        android:layout_width="136dp"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/ivSettings"
        app:layout_constraintStart_toEndOf="@+id/ivTop"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_recent_grey"
        android:contentDescription="@string/recent_pictures" />

    <TextView
        android:id="@+id/tvRecent"
        style="@style/BalooRegular.TextSmall12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_pictures"
        app:layout_constraintEnd_toEndOf="@+id/ivRecent"
        app:layout_constraintStart_toStartOf="@+id/ivRecent"
        app:layout_constraintTop_toBottomOf="@+id/ivRecent" />

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivRecent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings_grey"
        android:contentDescription="@string/settings" />

    <TextView
        android:id="@+id/tvSettings"
        style="@style/BalooRegular.TextSmall12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="@+id/ivSettings"
        app:layout_constraintStart_toStartOf="@+id/ivSettings"
        app:layout_constraintTop_toBottomOf="@+id/ivSettings" />
</androidx.constraintlayout.widget.ConstraintLayout>
